k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
      - name: chatbot
        image: docker.io/lmingus/chatbot:v1
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: chromadb-storage
            mountPath: /app/chroma_db
          - name: ollama-storage
            mountPath: /root/.ollama
      volumes:
        - name: chromadb-storage
          persistentVolumeClaim:
            claimName: chromadb-pvc
        - name: ollama-storage
          persistentVolumeClaim:
            claimName: ollama-pvc
